Added swisslipids and lipidmaps tests